fix jumpy slideBackward issue in home.js

--- a/sass/pages/home/_home.scss
+++ b/sass/pages/home/_home.scss
@@ -35,7 +35,8 @@ body.admin-bar {
       .img-cont {
         height: 100%;
         width: 100%;
-        top: 0; left: 0;
+        top: 0;
+        left: 0;
         background-size: cover;
         background-position: center center;
         width: 100vw;
