--- a/sass/site/primary/_footer.scss
+++ b/sass/site/primary/_footer.scss
@@ -52,12 +52,14 @@
     align-self: center;
 
     form {
+      max-width: 230px;
       margin: 0 auto 1em;
+
       input {
         font-size: 1em;
         letter-spacing: 0.1em;
         margin: 0 auto 1em;
-        padding: 0.33em 0.66em;
+        padding: 0.5em 0.8em;
         box-sizing: border-box;
 
         &[type="submit"] {
